# md-file-graph

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  EXCLUSION_GUIDE.md  FEATURES.md  INSTALL.md  QUICKSTART.md  README.md  pyproject.toml  requirements.txt  setup.py
src/md_file_graph/: __init__.py  cli.py  graph.py  html_generator.py  parser.py
tests/: __init__.py  test_graph.py  test_parser.py
